@@ -2,6 +2,7 @@ Release Notes
 
 * 3/30/2015
   * renamed to Http classes
+  * using requests instead of urllib3
 
 * 3/11/2015
   * added vomsrenew.sh
